# sosci-simlearn

./: .gitignore  README.md  pyproject.toml  run.sh
sosci_simlearn/: dataset.py  encoder.py  model.py  prepare_data.py  serve.py  train.py  train_val_split.py
