[tool.poetry]
name = "sosci-simlearn"
version = "0.1.0"
description = ""
authors = ["e-tornike <20404466+e-tornike@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sosci_simlearn"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
quaterion = "^0.1.35"
typer = "^0.9.0"
jsonlines = "^4.0.0"
tqdm = "^4.66.1"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
